# Lerning_fan-192

./: CMakeLists.txt  Fun.h  ferst_window.cpp  ferst_window.h  ferst_window.ui  form.ui  learning_fun.cpp  learning_fun.h  learning_fun.ui  learning_fun.ui.autosave  learning_fun_en_US.ts  learning_fun_run.cpp  learning_fun_run.h  main.cpp  recurce.qrc  second_window.cpp  second_window.h  second_window.ui
learning_fun/: CMakeLists.txt  CMakeLists.txt.user.2204c57  learning_fun.cpp  learning_fun.h  learning_fun.ui  learning_fun_en_US.ts  main.cpp
